[gd_scene load_steps=5 format=3 uid="uid://csqxigftpo4nj"]

[ext_resource type="Texture2D" uid="uid://by1vkysapgje7" path="res://assets/4851806.jpg" id="1_qx22q"]
[ext_resource type="Script" path="res://ylesanded8.gd" id="1_sio5j"]
[ext_resource type="FontFile" uid="uid://bgggcns5lu4p2" path="res://assets/VT323-Regular.ttf" id="2_laiti"]
[ext_resource type="Script" path="res://suva.gd" id="4_5tuwl"]

[node name="Ylesanne8" type="Node2D"]
script = ExtResource("1_sio5j")

[node name="4851806" type="Sprite2D" parent="."]
position = Vector2(586.5, 334)
scale = Vector2(0.391, 0.341)
texture = ExtResource("1_qx22q")
metadata/_edit_lock_ = true

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 318.0
offset_top = 17.0
offset_right = 884.0
offset_bottom = 127.0
theme_override_fonts/normal_font = ExtResource("2_laiti")
theme_override_font_sizes/normal_font_size = 80
text = "KIVI-PABER-KÄÄRID"
script = ExtResource("4_5tuwl")

[node name="player_score" type="RichTextLabel" parent="."]
offset_left = 51.0
offset_top = 118.0
offset_right = 258.0
offset_bottom = 166.0
theme_override_fonts/normal_font = ExtResource("2_laiti")
theme_override_font_sizes/normal_font_size = 40
text = "Punktid: 100"

[node name="enemy_score" type="RichTextLabel" parent="."]
offset_left = 932.0
offset_top = 118.0
offset_right = 1139.0
offset_bottom = 166.0
theme_override_fonts/normal_font = ExtResource("2_laiti")
theme_override_font_sizes/normal_font_size = 40
text = "Punktid: 100"

[node name="tulemus" type="RichTextLabel" parent="."]
offset_left = 479.0
offset_top = 207.0
offset_right = 728.0
offset_bottom = 255.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_laiti")
theme_override_font_sizes/normal_font_size = 40
text = "Arvuti võitis
"

[node name="player_choice" type="RichTextLabel" parent="."]
offset_left = 140.0
offset_top = 283.0
offset_right = 476.0
offset_bottom = 376.0
theme_override_fonts/normal_font = ExtResource("2_laiti")
theme_override_font_sizes/normal_font_size = 80
text = "TEE VALIK"

[node name="enemy_choice" type="RichTextLabel" parent="."]
offset_left = 711.0
offset_top = 283.0
offset_right = 1124.0
offset_bottom = 376.0
theme_override_fonts/normal_font = ExtResource("2_laiti")
theme_override_font_sizes/normal_font_size = 80
text = "ARVUTI VALIK"

[node name="NewGame" type="Button" parent="."]
offset_left = 513.0
offset_top = 120.0
offset_right = 661.0
offset_bottom = 184.0
tooltip_text = "Alusta uue mänguga"
text = "Uus mäng"

[node name="KIVI" type="Button" parent="."]
offset_left = 48.0
offset_top = 477.0
offset_right = 196.0
offset_bottom = 541.0
theme_override_fonts/font = ExtResource("2_laiti")
theme_override_font_sizes/font_size = 40
text = "KIVI"

[node name="PABER" type="Button" parent="."]
offset_left = 222.0
offset_top = 477.0
offset_right = 370.0
offset_bottom = 541.0
theme_override_fonts/font = ExtResource("2_laiti")
theme_override_font_sizes/font_size = 40
text = "PABER"

[node name="KAARID" type="Button" parent="."]
offset_left = 389.0
offset_top = 477.0
offset_right = 537.0
offset_bottom = 541.0
theme_override_fonts/font = ExtResource("2_laiti")
theme_override_font_sizes/font_size = 40
text = "KÄÄRID"

[connection signal="pressed" from="NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="KIVI" to="." method="_on_kivi_pressed"]
[connection signal="pressed" from="PABER" to="." method="_on_paber_pressed"]
[connection signal="pressed" from="KAARID" to="." method="_on_kaarid_pressed"]
